--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -18,8 +18,8 @@ structopt = { version = "0.3.8", optional = true }
 
 [dependencies]
 # third-party dependencies
-jsonrpc-core = "15.1.0"
-codec = { package = "parity-scale-codec", version = "2.0.0" }
+jsonrpc-core = "18.0.0"
+codec = { package = "parity-scale-codec", version = "2.2.0" }
 serde = { version = "1.0.102", features = ["derive"] }
 futures = { version = "0.3.9", features = ["compat"] }
 hex-literal = "0.3.1"
@@ -31,60 +31,62 @@ parking_lot = "0.11.1"
 node-polkadex-runtime = { path = '../runtime', version = '3.0.0' }
 
 # Substrate dependencies
-frame-benchmarking = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-pallet-im-online = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-pallet-staking = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-pallet-contracts = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-
-
-pallet-contracts-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-basic-authorship = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-cli = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10", features = ["wasmtime"] }
-sc-executor = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10", features = ["wasmtime"] }
-sc-service = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10", features = ["wasmtime"] }
-sc-client-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-chain-spec = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-consensus = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-sync-state-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-consensus-slots = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-consensus-uncles = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-authority-discovery = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-consensus-babe = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-consensus-babe-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-consensus-epochs = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-grandpa = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" ,package="sc-finality-grandpa"}
-sc-finality-grandpa-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-keystore = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-network = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-rpc = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-rpc-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-transaction-pool = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-api = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-authorship = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-block-builder = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-blockchain = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-consensus = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-consensus-babe = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-core = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-keystore = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-grandpa-primitives = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" , package="sp-finality-grandpa"}
-sp-inherents = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-timestamp = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-runtime = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-telemetry = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-transaction-pool = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-substrate-frame-rpc-system = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-service-test = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sp-keyring = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-frame-system = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-pallet-transaction-payment = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-
+frame-benchmarking = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-im-online = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-staking = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-contracts = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-contracts-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-basic-authorship = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-client-api = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-chain-spec = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-consensus = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-sync-state-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-consensus-slots = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-consensus-uncles = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-authority-discovery = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-consensus-babe = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-consensus-babe-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-consensus-epochs = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+grandpa = {  git = "https://github.com/paritytech/substrate", branch = "master" ,package="sc-finality-grandpa"}
+sc-finality-grandpa-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-keystore = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-network = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-rpc-api = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-transaction-pool = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-api = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-authorship = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-block-builder = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-blockchain = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-consensus = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-consensus-babe = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-core = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-keystore = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+grandpa-primitives = {  git = "https://github.com/paritytech/substrate", branch = "master" , package="sp-finality-grandpa"}
+sp-inherents = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-timestamp = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-telemetry = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-transaction-pool = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+substrate-frame-rpc-system = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-service-test = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-keyring = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-system = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-transaction-payment = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-transaction-pool-api = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-authority-discovery = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 #Primitives
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master'}
+sc-executor = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 
-sp-authority-discovery = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
+sc-cli = {  git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
+node-executor = {  git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
+sc-service = {  git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"]}
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "master", default-features= false, features = [
+	"memory-tracker",
+] }
 
 [dev-dependencies]
 futures = "0.3.9"
@@ -96,10 +98,10 @@ regex = "1"
 platforms = "1.1"
 async-std = { version = "1.6.5", features = ["attributes"] }
 soketto = "0.4.2"
-sc-keystore =  {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-consensus = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-consensus-babe =  {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
-sc-consensus-epochs =  {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
+sc-keystore =  {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-consensus = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-consensus-babe =  {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-consensus-epochs =  {  git = "https://github.com/paritytech/substrate", branch = "master" }
 
 [features]
 default = []
