--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "polkadex-node"
 version = "3.0.0"
-authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
-description = "A fresh FRAME-based Substrate node, ready for hacking."
+authors = ["Polkadex OÜ <https://polkadex.trade>"]
+description = "Polkadex main blockchain"
 edition = "2018"
 license = "Unlicense"
 build = "build.rs"
-homepage = "https://substrate.dev"
-repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
+homepage = "https://polkadex.trade"
+repository = "https://github.com/Polkadex-Substrate/Polkadex/"
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
