--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "node-polkadex-runtime"
 version = "3.0.0"
-authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
+authors = ["Polkadex OÜ  <https://polkadex.trade>"]
 edition = "2018"
 license = "Unlicense"
-homepage = "https://substrate.dev"
-repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
+homepage = "https://polkadex.trade"
+repository = "https://github.com/Polkadex-Substrate/Polkadex"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
