--- a/pallets/pdex-migration/Cargo.toml
+++ b/pallets/pdex-migration/Cargo.toml
@@ -30,3 +30,13 @@ std = [
     'orml-traits/std',
     'polkadex-primitives/std',
 ]
+runtime-benchmarks = [
+    # 'codec/runtime-benchmarks',
+    'frame-support/runtime-benchmarks',
+    'frame-system/runtime-benchmarks',
+    'sp-runtime/runtime-benchmarks',
+    'pallet-balances/runtime-benchmarks',
+    # 'orml-traits/runtime-benchmarks',
+    # 'polkadex-primitives/runtime-benchmarks',
+
+]
