--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -153,7 +153,6 @@ std = [
     'sp-transaction-pool/std',
     'sp-version/std',
     "sp-npos-elections/std",
-
     "orml-vesting/std",
     "orml-currencies/std",
     "orml-tokens/std",
@@ -167,7 +166,67 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "hex-literal",
     "pallet-balances/runtime-benchmarks",
+    "pallet-society/runtime-benchmarks",
+    "pallet-collective/runtime-benchmarks",
+    # 'pallet-collective/std',
+
     "pallet-timestamp/runtime-benchmarks",
     "sp-runtime/runtime-benchmarks",
     "frame-election-provider-support/runtime-benchmarks",
+    # 'codec/runtime-benchmarks',
+    # 'log/runtime-benchmarks',
+    # 'frame-executive/runtime-benchmarks',
+    'frame-support/runtime-benchmarks',
+    'frame-system/runtime-benchmarks',
+    # 'frame-system-rpc-runtime-api/runtime-benchmarks',
+    # 'pallet-authorship/runtime-benchmarks',
+    'pallet-babe/runtime-benchmarks',
+    'pallet-balances/runtime-benchmarks',
+    'pallet-grandpa/runtime-benchmarks',
+    'pallet-im-online/runtime-benchmarks',
+    'pallet-offences/runtime-benchmarks',
+    # 'pallet-randomness-collective-flip/runtime-benchmarks',
+    # 'pallet-session/runtime-benchmarks',
+    'pallet-staking/runtime-benchmarks',
+    # 'pallet-authority-discovery/runtime-benchmarks',
+    'pallet-multisig/runtime-benchmarks',
+    # 'pallet-sudo/runtime-benchmarks',
+    'pallet-vesting/runtime-benchmarks',
+    'pallet-indices/runtime-benchmarks',
+    'pallet-identity/runtime-benchmarks',
+    'pallet-proxy/runtime-benchmarks',
+    # 'pallet-recovery/runtime-benchmarks',
+    'pallet-society/runtime-benchmarks',
+    'pallet-utility/runtime-benchmarks',
+    "pallet-bounties/runtime-benchmarks",
+    'pallet-tips/runtime-benchmarks',
+    'pallet-timestamp/runtime-benchmarks',
+    # 'pallet-transaction-payment/runtime-benchmarks',
+    # 'pallet-transaction-payment-rpc-runtime-api/runtime-benchmarks',
+    'pallet-treasury/runtime-benchmarks',
+    'pallet-collective/runtime-benchmarks',
+    'pallet-elections-phragmen/runtime-benchmarks',
+    'frame-election-provider-support/runtime-benchmarks',
+    'pallet-membership/runtime-benchmarks',
+    'pallet-scheduler/runtime-benchmarks',
+    # "pallet-election-provider-multi-phase/runtime-benchmarks",
+    # 'sp-api/runtime-benchmarks',
+    # 'sp-block-builder/runtime-benchmarks',
+    # 'sp-consensus-babe/runtime-benchmarks',
+    # 'sp-core/runtime-benchmarks',
+    # 'sp-inherents/runtime-benchmarks',
+    # 'sp-offchain/runtime-benchmarks',
+    'sp-runtime/runtime-benchmarks',
+    # 'sp-session/runtime-benchmarks',
+    # 'sp-staking/runtime-benchmarks',
+    # 'sp-runtime-benchmarks/runtime-benchmarks',
+    # 'sp-transaction-pool/runtime-benchmarks',
+    # 'sp-version/runtime-benchmarks',
+    # "sp-npos-elections/runtime-benchmarks",
+    "orml-vesting/runtime-benchmarks",
+    # "orml-currencies/runtime-benchmarks",
+    "orml-tokens/runtime-benchmarks",
+    # "orml-traits/runtime-benchmarks",
+    # "polkadex-primitives/runtime-benchmarks"
+
 ]
