Some improvemnt to benchmark code
Does not crash immediatly

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -69,6 +69,7 @@ sp-block-builder = { default-features = false, git = "https://github.com/parityt
 sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-session-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 frame-election-provider-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -160,73 +161,38 @@ std = [
     "polkadex-primitives/std"
 ]
 runtime-benchmarks = [
-    "frame-benchmarking",
-    "frame-support/runtime-benchmarks",
-    "frame-system-benchmarking",
-    "frame-system/runtime-benchmarks",
-    "hex-literal",
-    "pallet-balances/runtime-benchmarks",
-    "pallet-society/runtime-benchmarks",
-    "pallet-collective/runtime-benchmarks",
-    # 'pallet-collective/std',
-
-    "pallet-timestamp/runtime-benchmarks",
-    "sp-runtime/runtime-benchmarks",
-    "frame-election-provider-support/runtime-benchmarks",
-    # 'codec/runtime-benchmarks',
-    # 'log/runtime-benchmarks',
-    # 'frame-executive/runtime-benchmarks',
-    'frame-support/runtime-benchmarks',
-    'frame-system/runtime-benchmarks',
-    # 'frame-system-rpc-runtime-api/runtime-benchmarks',
-    # 'pallet-authorship/runtime-benchmarks',
-    'pallet-babe/runtime-benchmarks',
-    'pallet-balances/runtime-benchmarks',
-    'pallet-grandpa/runtime-benchmarks',
-    'pallet-im-online/runtime-benchmarks',
-    'pallet-offences/runtime-benchmarks',
-    # 'pallet-randomness-collective-flip/runtime-benchmarks',
-    # 'pallet-session/runtime-benchmarks',
-    'pallet-staking/runtime-benchmarks',
-    # 'pallet-authority-discovery/runtime-benchmarks',
-    'pallet-multisig/runtime-benchmarks',
-    # 'pallet-sudo/runtime-benchmarks',
-    'pallet-vesting/runtime-benchmarks',
-    'pallet-indices/runtime-benchmarks',
-    'pallet-identity/runtime-benchmarks',
-    'pallet-proxy/runtime-benchmarks',
-    # 'pallet-recovery/runtime-benchmarks',
-    'pallet-society/runtime-benchmarks',
-    'pallet-utility/runtime-benchmarks',
-    "pallet-bounties/runtime-benchmarks",
-    'pallet-tips/runtime-benchmarks',
-    'pallet-timestamp/runtime-benchmarks',
-    # 'pallet-transaction-payment/runtime-benchmarks',
-    # 'pallet-transaction-payment-rpc-runtime-api/runtime-benchmarks',
-    'pallet-treasury/runtime-benchmarks',
-    'pallet-collective/runtime-benchmarks',
-    'pallet-elections-phragmen/runtime-benchmarks',
-    'frame-election-provider-support/runtime-benchmarks',
-    'pallet-membership/runtime-benchmarks',
-    'pallet-scheduler/runtime-benchmarks',
-    # "pallet-election-provider-multi-phase/runtime-benchmarks",
-    # 'sp-api/runtime-benchmarks',
-    # 'sp-block-builder/runtime-benchmarks',
-    # 'sp-consensus-babe/runtime-benchmarks',
-    # 'sp-core/runtime-benchmarks',
-    # 'sp-inherents/runtime-benchmarks',
-    # 'sp-offchain/runtime-benchmarks',
-    'sp-runtime/runtime-benchmarks',
-    # 'sp-session/runtime-benchmarks',
-    # 'sp-staking/runtime-benchmarks',
-    # 'sp-runtime-benchmarks/runtime-benchmarks',
-    # 'sp-transaction-pool/runtime-benchmarks',
-    # 'sp-version/runtime-benchmarks',
-    # "sp-npos-elections/runtime-benchmarks",
-    "orml-vesting/runtime-benchmarks",
-    # "orml-currencies/runtime-benchmarks",
-    "orml-tokens/runtime-benchmarks",
-    # "orml-traits/runtime-benchmarks",
-    # "polkadex-primitives/runtime-benchmarks"
-
+	"frame-benchmarking",
+	"frame-support/runtime-benchmarks",
+	"frame-system/runtime-benchmarks",
+	"pallet-election-provider-multi-phase/runtime-benchmarks",
+	"sp-runtime/runtime-benchmarks",
+	# "pallet-assets/runtime-benchmarks",
+	"pallet-babe/runtime-benchmarks",
+	"pallet-balances/runtime-benchmarks",
+	"pallet-bounties/runtime-benchmarks",
+	"pallet-collective/runtime-benchmarks",
+	# "pallet-contracts/runtime-benchmarks",
+	# "pallet-democracy/runtime-benchmarks",
+	"pallet-elections-phragmen/runtime-benchmarks",
+	"pallet-grandpa/runtime-benchmarks",
+	"pallet-identity/runtime-benchmarks",
+	"pallet-im-online/runtime-benchmarks",
+	"pallet-indices/runtime-benchmarks",
+	"pallet-membership/runtime-benchmarks",
+	# "pallet-mmr/runtime-benchmarks",
+	"pallet-multisig/runtime-benchmarks",
+	"pallet-proxy/runtime-benchmarks",
+	"pallet-scheduler/runtime-benchmarks",
+	"pallet-society/runtime-benchmarks",
+	"pallet-staking/runtime-benchmarks",
+	"pallet-timestamp/runtime-benchmarks",
+	"pallet-tips/runtime-benchmarks",
+	# "pallet-transaction-storage/runtime-benchmarks",
+	"pallet-treasury/runtime-benchmarks",
+	"pallet-utility/runtime-benchmarks",
+	# "pallet-uniques/runtime-benchmarks",
+	# "pallet-offences-benchmarking",
+	# "pallet-session-benchmarking",
+	"frame-system-benchmarking",
+	"hex-literal",
 ]
