--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -27,11 +27,13 @@ log = "0.4.8"
 rand = "0.7.2"
 structopt = { version = "0.3.8" }
 parking_lot = "0.11.1"
+itertools = "0.10.1"
 # local dependencies
 node-polkadex-runtime = { path = '../runtime', version = '3.0.0' }
 
 # Substrate dependencies
 frame-benchmarking = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-support = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-im-online = {  git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-staking = {  git = "https://github.com/paritytech/substrate", branch = "master" }
