Added PDEX migration pallet

--- a/pallets/pdex-migration/Cargo.toml
+++ b/pallets/pdex-migration/Cargo.toml
@@ -13,12 +13,13 @@ targets = ['x86_64-unknown-linux-gnu']
 codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
 frame-support = { default-features = false,  git = "https://github.com/paritytech/substrate" , branch="master" }
 sp-runtime = { default-features = false,  git = "https://github.com/paritytech/substrate" ,branch="master"  }
-sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" ,branch="master"  }
 pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate" ,branch="master"  }
 frame-system = { default-features = false, git = "https://github.com/paritytech/substrate"  ,branch="master" }
+pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate" ,branch="master"  }
 
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
-orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
+[dev-dependencies]
+sp-core = { default-features = false,  git = "https://github.com/paritytech/substrate" ,branch="master"  }
+sp-io = { default-features = false,  git = "https://github.com/paritytech/substrate" ,branch="master"  }
 
 [features]
 default = ['std']
@@ -27,6 +28,6 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'sp-runtime/std',
-    'orml-traits/std',
-    'polkadex-primitives/std',
+    'pallet-balances/std',
+    'pallet-sudo/std'
 ]
