--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -85,8 +85,7 @@ orml-vesting = { git = "https://github.com/open-web3-stack/open-runtime-module-l
 
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
-
-#erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
+erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
