--- a/pallets/pdex-migration/Cargo.toml
+++ b/pallets/pdex-migration/Cargo.toml
@@ -11,15 +11,16 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
-frame-support = { default-features = false,  git = "https://github.com/paritytech/substrate" , branch="master" }
-sp-runtime = { default-features = false,  git = "https://github.com/paritytech/substrate" ,branch="master"  }
-pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate" ,branch="master"  }
-frame-system = { default-features = false, git = "https://github.com/paritytech/substrate"  ,branch="master" }
-pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate" ,branch="master"  }
+frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
 
 [dev-dependencies]
-sp-core = { default-features = false,  git = "https://github.com/paritytech/substrate" ,branch="master"  }
-sp-io = { default-features = false,  git = "https://github.com/paritytech/substrate" ,branch="master"  }
+sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 
 [features]
 default = ['std']
@@ -31,3 +32,4 @@ std = [
     'pallet-balances/std',
     'pallet-sudo/std'
 ]
+runtime-benchmarks = ["frame-benchmarking"]
