--- a/contracts/uniswap_v2/Cargo.toml
+++ b/contracts/uniswap_v2/Cargo.toml
@@ -8,14 +8,14 @@ edition = "2018"
 overflow-checks = false
 
 [dependencies]
-ink_primitives = { version = "3.0.0-rc5", default-features = false }
-ink_metadata = { version = "3.0.0-rc5", default-features = false, features = [
+ink_primitives = { version = "=3.0.0-rc3", default-features = false }
+ink_metadata = { version = "=3.0.0-rc3", default-features = false, features = [
     "derive",
 ], optional = true }
-ink_env = { version = "3.0.0-rc5", default-features = false }
-ink_storage = { version = "3.0.0-rc5", default-features = false }
-ink_lang = { version = "3.0.0-rc5", default-features = false }
-ink_prelude = { version = "3.0.0-rc5", default-features = false }
+ink_env = { version = "=3.0.0-rc3", default-features = false }
+ink_storage = { version = "=3.0.0-rc3", default-features = false }
+ink_lang = { version = "=3.0.0-rc3", default-features = false }
+ink_prelude = { version = "=3.0.0-rc3", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = [
     "derive",
