--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -44,9 +44,11 @@ pallet-identity = { default-features = false, git = "https://github.com/parityte
 pallet-proxy = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-tips = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-recovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-contracts = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-
+pallet-contracts-primitives = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 #end added
 #frame
 frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -85,6 +87,7 @@ orml-vesting = { git = "https://github.com/open-web3-stack/open-runtime-module-l
 
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
+pallet-polkapool = { path = "../pallets/polkapool", default-features = false }
 erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
 
 [build-dependencies]
@@ -120,6 +123,9 @@ std = [
     'pallet-recovery/std',
     'pallet-utility/std',
     "pallet-bounties/std",
+    'pallet-contracts/std',
+    'pallet-contracts-primitives/std',
+    'pallet-contracts-rpc-runtime-api/std',
     'pallet-tips/std',
     'pallet-timestamp/std',
     'pallet-transaction-payment/std',
