--- a/pallets/polkapool/Cargo.toml
+++ b/pallets/polkapool/Cargo.toml
@@ -12,43 +12,44 @@ targets = ['x86_64-unknown-linux-gnu']
 [dependencies]
 # Polkadex Primitives
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
-# ORML
-orml-tokens = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
-orml-currencies = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
-orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
+
+# # ORML
+# orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
+orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
+orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
 
 # external dependencies
 codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
 rand = {default-features = false, version = '0.8.0'}
 rand_chacha = {default-features = false, version = '0.3.0'}
 # Substrate dependencies
-frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git'}
-frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git'}
-frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git'}
-sp-arithmetic = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git'}
-sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git'}
-sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git'}
-pallet-babe = { default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate" }
-sp-consensus-vrf = { default-features = false, version = '0.9.0', git = "https://github.com/paritytech/substrate" }
-sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git'}
+frame-benchmarking = {default-features = false, optional = true, branch="master", git = 'https://github.com/paritytech/substrate'}
+frame-support = {default-features = false, branch="master", git = 'https://github.com/paritytech/substrate'}
+frame-system = {default-features = false, branch="master", git = 'https://github.com/paritytech/substrate'}
+sp-arithmetic = {default-features = false, branch="master", git = 'https://github.com/paritytech/substrate'}
+sp-core = {default-features = false, branch="master", git = 'https://github.com/paritytech/substrate'}
+sp-std = {default-features = false, branch="master", git = 'https://github.com/paritytech/substrate'}
+pallet-babe = { default-features = false, branch="master", git = "https://github.com/paritytech/substrate" }
+sp-consensus-vrf = { default-features = false, branch="master", git = "https://github.com/paritytech/substrate" }
+sp-runtime = {default-features = false, branch="master", git = 'https://github.com/paritytech/substrate'}
 
 [dev-dependencies]
 serde = '1.0.119'
-sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git'}
+# sp-io = {default-features = false, branch="master", git = 'https://github.com/paritytech/substrate'}
 
 [features]
 default = ['std']
-runtime-benchmarks = ['frame-benchmarking']
+# runtime-benchmarks = ['frame-benchmarking']
 std = [
 	"rand/std",
 	"rand_chacha/std",
 	'codec/std',
 	'frame-support/std',
 	'frame-system/std',
-	'frame-benchmarking/std',
-	'orml-tokens/std',
-	'orml-currencies/std',
-	'orml-traits/std',
+	# 'frame-benchmarking/std',
+	# 'orml-tokens/std',
+	# 'orml-currencies/std',
+	# 'orml-traits/std',
 	"sp-consensus-vrf/std",
 	'polkadex-primitives/std',
 	'sp-arithmetic/std',
