--- a/pallets/ipfs-client/Cargo.toml
+++ b/pallets/ipfs-client/Cargo.toml
@@ -34,7 +34,7 @@ sc-network = { git = "https://github.com/paritytech/substrate", branch = "master
 sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "master" }
 
 offchain-ipfs-primitives = { path = "../../offchain-ipfs-primitives" }
-
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master' }
 [dev-dependencies]
 sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "master" }
 
