--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -70,6 +70,7 @@ sp-inherents = { default-features = false, git = "https://github.com/paritytech/
 sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 frame-election-provider-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 #end added
 
 # Used for the node template's RPCs
@@ -86,17 +87,20 @@ orml-vesting = { git = "https://github.com/open-web3-stack/open-runtime-module-l
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
 erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
+ipfs-pallet = { path = "../pallets/ipfs-pallet", default-features = false }
+offchain-ipfs-primitives = { path = "../offchain-ipfs-primitives", default-features = false }
+cid = {version="0.7.0", default-features = false, features = ["scale-codec"]}
 
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
 
-[dev-dependencies]
-sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
 
 
 [features]
 default = ["std"]
 std = [
+    'cid/std',
+    'offchain-ipfs-primitives/std',
     'codec/std',
     'log/std',
     'frame-executive/std',
@@ -144,9 +148,10 @@ std = [
     'sp-transaction-pool/std',
     'sp-version/std',
     "sp-npos-elections/std",
-
+    "sp-io/std",
     "orml-vesting/std",
-    "polkadex-primitives/std"
+    "polkadex-primitives/std",
+    "ipfs-pallet/std"
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
