--- a/pallets/ipfs-client/Cargo.toml
+++ b/pallets/ipfs-client/Cargo.toml
@@ -14,7 +14,8 @@ parking_lot = "0.11"
 thiserror = "1.0"
 wasm-timer = "0.2.5"
 ipfs-embed = { git = "https://github.com/ipfs-rust/ipfs-embed.git" }
-
+async-trait = { version = "0.1.50"}
+lazy_static = "1.4.0"
 codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
 prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
 
@@ -27,7 +28,7 @@ sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
 sc-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }
-
+sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "master" }
 sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
 sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
 sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
