--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -82,7 +82,9 @@ frame-system-benchmarking = { default-features = false, git = "https://github.co
 
 # ORML Pallets
 orml-vesting = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
-
+orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", default-features = false, branch="gj-substrate-master" }
+orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", default-features = false, branch="gj-substrate-master" }
+orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", default-features = false, branch="gj-substrate-master" }
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
 erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
@@ -146,6 +148,8 @@ std = [
     "sp-npos-elections/std",
 
     "orml-vesting/std",
+    "orml-tokens/std",
+    "orml-currencies/std",
     "polkadex-primitives/std"
 ]
 runtime-benchmarks = [
