--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -98,7 +98,8 @@ futures = "0.3.9"
 tempfile = "3.1.0"
 assert_cmd = "1.0"
 nix = "0.19"
-serde_json = "1.0"
+serde_json = "1.0.68"
+#serde_json = "1.0"
 regex = "1"
 platforms = "1.1"
 async-std = { version = "1.6.5", features = ["attributes"] }
