--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -21,13 +21,13 @@ sp-runtime = {  git = "https://github.com/paritytech/substrate", default-feature
 #polkadex-primitives = { path = "../primitives", default-features = false }
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
-orml-tokens = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
-orml-currencies = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
-orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
+orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", branch = "gj-substrate-master",  default-features = false }
+orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", branch = "gj-substrate-master", default-features = false }
+orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", branch = "gj-substrate-master", default-features = false }
 pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false }
 pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", default-features = false }
-timestamp= {git = "https://github.com/paritytech/substrate.git", package = "pallet-timestamp", version = "3.0.0", default-features = false}
-polkadex-sgx-primitives = {package="polkadex-sgx-primitives", git = "https://github.com/Polkadex-Substrate/polkadexTEE-worker", branch = "develop", default-features=false}
+timestamp= {git = "https://github.com/paritytech/substrate.git", package = "pallet-timestamp", version = "4.0.0-dev", default-features = false}
+polkadex-sgx-primitives = {path = "../../../polkadex-primitives", default-features=false}
 
 [dev-dependencies]
 sp-keyring = {  git = "https://github.com/paritytech/substrate", default-features = false }
