--- a/pallets/Polkadex_Ido/Cargo.toml
+++ b/pallets/Polkadex_Ido/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
+codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
 hex = { version = "2.1.0", package = "rustc-hex", default-features = false }
-serde = { version = "1.0.127", optional = true }
+serde = { version = "1.0.68", optional = true }
 
-frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"  }
 frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-io = {  git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
 sp-core = {  git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
@@ -23,7 +23,7 @@ orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-l
 orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git", default-features = false, branch="gj-substrate-master" }
 pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
 sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",branch = 'gj-substrate-master', default-features = false }
 rand = {default-features = false, version = '0.8.0'}
 rand_chacha = {default-features = false, version = '0.3.0'}
 pallet-polkadex-ido-primitives = { path = "../../pallets/Polkadex_Ido/common", default-features = false}
