--- a/pallets/Polkadex_Ido/common/Cargo.toml
+++ b/pallets/Polkadex_Ido/common/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2018"
 
 [dependencies]
 codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
-serde = { version = "1.0.127", features = ["derive"], optional = true }
+serde = { version = "1.0.68", features = ["derive"], optional = true }
 
 # Substrate Dependencies (This crate should not rely on frame)
-sp-core = {  git = "https://github.com/paritytech/substrate", default-features = false }
-sp-std = {  git = "https://github.com/paritytech/substrate", default-features = false }
-sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false }
+sp-core = {  git = "https://github.com/paritytech/substrate", default-features = false,branch = "master"  }
+sp-std = {  git = "https://github.com/paritytech/substrate", default-features = false,branch = "master"  }
+sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false,branch = "master"  }
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
 
 [features]
