--- a/pallets/Polkadex_Ido/rpc/Cargo.toml
+++ b/pallets/Polkadex_Ido/rpc/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2018"
 
 [dependencies]
 codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
-serde = { version = "1.0.127", optional = true }
+serde = { version = "1.0.68", optional = true }
 jsonrpc-core = "15.1.0"
 jsonrpc-core-client = "15.1.0"
 jsonrpc-derive = "15.1.0"
-sp-rpc = {  git = "https://github.com/paritytech/substrate", default-features = false }
-sp-blockchain = {  git = "https://github.com/paritytech/substrate", default-features = false }
-sp-api = {  git = "https://github.com/paritytech/substrate", default-features = false }
-sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false }
+sp-rpc = {  git = "https://github.com/paritytech/substrate", default-features = false ,branch = "master"}
+sp-blockchain = {  git = "https://github.com/paritytech/substrate", default-features = false ,branch = "master"}
+sp-api = {  git = "https://github.com/paritytech/substrate", default-features = false ,branch = "master"}
+sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false,branch = "master" }
 pallet-polkadex-ido-primitives = {path = "../../Polkadex_Ido/common", default-features = false}
 polkadex-ido-runtime-api = {path = "./runtime-api"}
