--- a/pallets/Polkadex_Ido/rpc/runtime-api/Cargo.toml
+++ b/pallets/Polkadex_Ido/rpc/runtime-api/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
+codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
 
 # Substrate Dependencies
 pallet-polkadex-ido-primitives= { default-features = false, path = "../../common" }
-sp-api = {  git = "https://github.com/paritytech/substrate", default-features = false }
-sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false }
-sp-std = {  git = "https://github.com/paritytech/substrate", default-features = false }
+sp-api = {  git = "https://github.com/paritytech/substrate", default-features = false,branch = "master"  }
+sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false,branch = "master"  }
+sp-std = {  git = "https://github.com/paritytech/substrate", default-features = false,branch = "master"  }
 
 [features]
 default = ["std"]
