--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -78,6 +78,7 @@ frame-system-rpc-runtime-api = { default-features = false, git = "https://github
 # Used for runtime benchmarking
 frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
 frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
+pallet-society = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
 
 
 # ORML Pallets
@@ -153,9 +154,30 @@ runtime-benchmarks = [
     "frame-support/runtime-benchmarks",
     "frame-system-benchmarking",
     "frame-system/runtime-benchmarks",
-    "hex-literal",
+    "pallet-election-provider-multi-phase/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
+    "pallet-babe/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks",
+    "pallet-bounties/runtime-benchmarks",
+    "pallet-collective/runtime-benchmarks",
+    "pallet-elections-phragmen/runtime-benchmarks",
+    "pallet-grandpa/runtime-benchmarks",
+    "pallet-identity/runtime-benchmarks",
+    "pallet-im-online/runtime-benchmarks",
+    "pallet-indices/runtime-benchmarks",
+    "pallet-membership/runtime-benchmarks",
+    "pallet-multisig/runtime-benchmarks",
+    "pallet-proxy/runtime-benchmarks",
+    "pallet-scheduler/runtime-benchmarks",
+    'pallet-society/runtime-benchmarks',
+    "pallet-staking/runtime-benchmarks",
     "pallet-timestamp/runtime-benchmarks",
+    "pallet-tips/runtime-benchmarks",
+    "pallet-treasury/runtime-benchmarks",
+    "pallet-utility/runtime-benchmarks",
+    "frame-system-benchmarking",
+    "orml-vesting/runtime-benchmarks",
+    "hex-literal",
     "sp-runtime/runtime-benchmarks",
     "frame-election-provider-support/runtime-benchmarks",
     "erc20-pdex-migration-pallet/runtime-benchmarks"
