--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -60,6 +60,8 @@ sp-session = { default-features = false, git = "https://github.com/paritytech/su
 sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-version = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features =false}
+
 
 #added
 sp-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -92,7 +94,10 @@ pdex-migration = { path = "../pallets/pdex-migration", default-features = false 
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
 
 [dev-dependencies]
-sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
+# sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
+# pallet-society = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
+pallet-society = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
 
 
 [features]
@@ -179,7 +184,6 @@ runtime-benchmarks = [
     "frame-system-benchmarking",
     "orml-vesting/runtime-benchmarks",
     "hex-literal",
-    "sp-runtime/runtime-benchmarks",
     "frame-election-provider-support/runtime-benchmarks",
     "pdex-migration/runtime-benchmarks"
 ]
